Changed task names

--- a/roles/extend-disk/tasks/main.yml
+++ b/roles/extend-disk/tasks/main.yml
@@ -2,18 +2,18 @@
 # tasks file for extend-disk
 
 - name: Read device information (always use unit when probing)
-  community.general.parted: 
+  parted: 
     device: "{{ disk }}"
     unit: MiB
   register: disk_info
 
 - name: Print return information from the previous task
-  ansible.builtin.debug:
+  debug:
     var: disk_info
     verbosity: 2
 
 - name: Extend the existing partition to fill all available space
-  community.general.parted:
+  parted:
     device: "{{ disk }}"
     number: "{{ disk_info.partitions | length }}"
     part_end: "100%"
