Need to use community module again

--- a/roles/extend-disk/tasks/main.yml
+++ b/roles/extend-disk/tasks/main.yml
@@ -23,6 +23,6 @@
     resize: true
 
 - name: Extend the LVM to the 
-  lvg:
+  community.general.lvg:
     vg: "{{ volume_group }}"
     pvresize: true
