--- a/roles/extend-disk/tasks/main.yml
+++ b/roles/extend-disk/tasks/main.yml
@@ -22,8 +22,15 @@
     state: present
     resize: true
 
-- name: Extend the LVM to the 
-  community.general.lvg:
-    vg: "{{ volume_group }}"
-    pvs: "{{ disk }}{{ disk_info.partitions | length }}"
-    pvresize: true
+# - name: Extend the LVM to the new space on {{ disk }}
+#   community.general.lvg:
+#     vg: "{{ volume_group }}"
+#     pvs: "{{ disk }}{{ disk_info.partitions | length }}"
+#     pvresize: true
+
+- name: Extend the logical volume to take all remaining space and resize the underlying filesystem
+  community.general.lvol:
+    vg: ubuntu-vg
+    lv: ubuntu-lv
+    size: +100%FREE
+    resizefs: true
