Changed group for primary play

--- a/main.yml
+++ b/main.yml
@@ -2,7 +2,7 @@
 # The main playbook file for the extend-disk role.
 
 - name: Extend the disk to all available space.
-  hosts: all
+  hosts: linux
   become: true
   roles:
     - extend-disk
